crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@incorrect_return_type_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/incorrect_return_type_fail.tapir
---
Error: 'boool' is not a valid type, must be one of fix, bool or int
   ╭─[incorrect_return_type_fail.tapir:1:1]
   │
 6 │ fn foo2() -> (int, boool) {
   │                    ──┬──  
   │                      ╰──── Unknown type
───╯
Error: Function is declared to return type int but got fix
   ╭─[incorrect_return_type_fail.tapir:1:1]
   │
 1 │ fn foo() -> (int, bool) {
   │              ─┬─  
   │               ╰─── This has type int
 2 │     return 3.5, 7;
   │            ─┬─  
   │             ╰─── This has type fix
───╯
Error: Function is declared to return type bool but got int
   ╭─[incorrect_return_type_fail.tapir:1:1]
   │
 1 │ fn foo() -> (int, bool) {
   │                   ──┬─  
   │                     ╰─── This has type bool
 2 │     return 3.5, 7;
   │                 ┬  
   │                 ╰── This has type int
───╯
